--- a/style.css
+++ b/style.css
@@ -14,14 +14,21 @@ body {
 
 #calculator {
     height: 75%;
-    width: 75%;
+    width: 800px;
 }
 
 #display {
+    display: flex;
     height: 33%;
     width: 100%;
     border: 2px solid black;
     background-color: #eeeeee;
+    justify-content: center;
+    align-items: center;
+}
+
+p {
+    font-size: 50px;
 }
 
 #buttons {
